kubernetes/openresty/demo/gcp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openresty-reverse-proxy
  namespace: demo
  annotations:
    cloud.google.com/backend-config: '{"default": "allow-cdn"}'
spec:
  ports:
  - port: 50080
    protocol: TCP
    targetPort: 80
  selector:
    app: openresty-reverse-proxy
  type: NodePort
